tests/negative/neg_send_use_after_move.safe
-- Test: neg_send_use_after_move
-- Description: Access-typed channel elements are rejected before send ownership-transfer checks run.
-- Expected: REJECT source_frontend_error

package neg_send_use_after_move

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      source : payload_ptr = new ((value = 1) as payload);

      send data_ch, source;
      source.all.value = 2;

